# grasp

./: .gitignore  .gitmodules  .travis.yml  AME__C_8f90.html  CMakeLists.txt  Doxyfile  Gracah1_8f90.html  Gracah1_8f90_a342a8865ac17a7069eceee73f586d6dc_icgraph.map  Gracah1__I_8f90.html  HF_8f90.html  HF_8f90_a3e02436b9211704d5ab8b474b70ba741_icgraph.map  HF_8f90_a3e02436b9211704d5ab8b474b70ba741_icgraph.md5  HF_8f90_a728bf659a2cefaa293a80e0c0ed2ad00_cgraph.map  HF_8f90_a728bf659a2cefaa293a80e0c0ed2ad00_cgraph.md5  HF_8f90_a98791ee21a4056f61c37360e4192830a_icgraph.map  HF_8f90_abde0b4947e433715a828d80b8eedae7e_icgraph.map  HF_8f90_acbf781f0a3c04994d312ea954ec8e46c_cgraph.map  HF_8f90_acbf781f0a3c04994d312ea954ec8e46c_cgraph.md5  HF_8f90_ae118e0eef4a9ad4c0ed639a05f9c7e67_cgraph.md5  HF_8f90_ae118e0eef4a9ad4c0ed639a05f9c7e67_icgraph.md5  HF_8f90_ae7a459383c1ab123fe8e98b81859bcca_icgraph.map  HF_8f90_ae7a459383c1ab123fe8e98b81859bcca_icgraph.md5  Interact__MR_8f90.html  Interact__MR_8f90_a6c71a7e79835521b9d9da3ab56a56b9f_cgraph.map  Interact__MR_8f90_a6c71a7e79835521b9d9da3ab56a56b9f_cgraph.md5  Interact__MR_8f90_a6c71a7e79835521b9d9da3ab56a56b9f_icgraph.map  Interact__MR_8f90_a6c71a7e79835521b9d9da3ab56a56b9f_icgraph.md5  Interact__MR__I_8f90.html  Interact__csf_8f90.html  Interact__csf_8f90_ab6c360fbf8220f0c09ab2f11f4261a74_cgraph.map  Interact__csf_8f90_ab6c360fbf8220f0c09ab2f11f4261a74_cgraph.md5  Interact__csf_8f90_ab6c360fbf8220f0c09ab2f11f4261a74_icgraph.map  Interact__csf_8f90_ab6c360fbf8220f0c09ab2f11f4261a74_icgraph.md5  Interact__csf__I_8f90.html  LICENSE.md  LICENSE_8md.html  RCSFinteract_8f90.html  RCSFinteract_8f90_a2e3af96bc4c9d92477bcdf4b82e1acbc_cgraph.map  RCSFinteract_8f90_a2e3af96bc4c9d92477bcdf4b82e1acbc_cgraph.md5  RCSFzerofirst_8f90.html  (+3780 more)
.ci/: travis-deploy.sh
.github/: CODEOWNERS
.github/workflows/: buildmake.yml  run.sh  test.yml  triggerbuilds.yml
contrib/: checkbin.sh  whitespace.sh
grasptest/case1/script/: sh_files_c  sh_scf
grasptest/case1_mpi/script/: sh_case1  sh_scf
grasptest/case2/script/: sh_DF  sh_case2  sh_even  sh_files_c  sh_nuc_seq  sh_odd
grasptest/case2_mpi/script/: sh_even  sh_even_odd  sh_nuc_seq  sh_odd
grasptest/case3/script/: sh_DF_even  sh_DF_odd  sh_case3  sh_collect  sh_even  sh_files_c  sh_nuc_seq  sh_odd
grasptest/example1/script/: script_ex1
grasptest/example2/script/: README  script_ex2
grasptest/example3/script/: script_ex3
grasptest/example4/: energylabel.latex
grasptest/example4/script/: lscomp.pl
grasptest/example5/script/: README
search/: all_0.js  all_1.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_b.js  all_c.js  all_d.js  all_e.js  files_0.js  files_10.js  files_11.js  files_15.js  files_16.js  files_17.js  files_18.js  files_19.js  files_2.js  files_3.js  files_4.js  files_6.js  files_7.js  files_9.js  files_b.js  files_c.js  files_d.js  (+11 more)
src/appl/rangular90_mpi/: CMakeLists.txt
src/appl/rbiotransform90_mpi/: CMakeLists.txt
src/appl/rci90/: BUILDCONF.sh  CMakeLists.txt  Makefile  maneig.f90  matrix.f90  setham_gg.f90  writecimatrix.f90
src/appl/rci90_mpi/: BUILDCONF.sh  CMakeLists.txt  Makefile
src/appl/rmcdhf90_mpi/: CMakeLists.txt  getscd.f90  getscdmpi.f90
src/appl/rtransition90_mpi/: CMakeLists.txt
src/lib/lib9290/: setcsll.f90
src/lib/libmod/: CMakeLists.txt
src/lib/mpi90/: CMakeLists.txt  sys_chdir.f90
src/libgrasp/: CMakeLists.txt  constants.f90  datafiles.f90
test/: CMakeLists.txt  libgrasp_isodata.f90
test/isodata/: H3_finite
test/lib/: grasptest.f90
test/libgrasp/: constants.f90
test/libgrasp/asfs/: generate.sh  readwrite.f90
test/libgrasp/isodata/: H1_point  isodata_write.values.ref  isodata_write.zeros.ref  read.f90  rubbish  write.f90
test/libgrasp/orbitals/: cleanup.sh  generate.sh  read.f90  write.f90
travis-test-build/: Gracah1_8f90.html  HF_8f90_abde0b4947e433715a828d80b8eedae7e_icgraph.md5  HF_8f90_acbf781f0a3c04994d312ea954ec8e46c_cgraph.map  HF_8f90_ae118e0eef4a9ad4c0ed639a05f9c7e67_cgraph.map  Interact__MR_8f90.html  RCSFinteract_8f90_a2e3af96bc4c9d92477bcdf4b82e1acbc_cgraph.map  RCSFzerofirst_8f90.html  RCSFzerofirst_8f90_a6e404cd840a02402fc9d991414c06fa1_cgraph.map  README_8md.html  Rmeajj11_8f90.html  Rmeajj11_8f90_aab297a919e8b1568435927cd725f692d_cgraph.map  Rmeajj11_8f90_aab297a919e8b1568435927cd725f692d_cgraph.md5  Rmeajj9_8f90.html  Rmeajj_8f90.html  Rmeajj_8f90_aea82e9988e048c32742923fc0ddc6998_cgraph.map  Rmeajj_8f90_aea82e9988e048c32742923fc0ddc6998_cgraph.md5  Rmeajj_8f90_aea82e9988e048c32742923fc0ddc6998_icgraph.map  Rmeajj_8f90_aea82e9988e048c32742923fc0ddc6998_icgraph.md5  Rmew3jj_8f90_abdf659d0740800efd99dc17386b2552f_icgraph.map  Rmew5jj_8f90_af0f01a06231c718963d6b54bd76f1845_icgraph.map  Rmew5jj__I_8f90.html  Rmew7bjj_8f90_a74c2d6ef20cf7d82bcc1df699823e6c3_icgraph.map  Rmew7bjj__I_8f90.html  Rmew7jj_8f90_a21e32b93d9ad558f93d0a9127f922a01_cgraph.md5  Rwjj_8f90_a7ecd3a93cdf2e0446d4eb26cd60b5767_cgraph.md5  Rwjj_8f90_a7ecd3a93cdf2e0446d4eb26cd60b5767_icgraph.map  a1jj_8f90_abe9f9e7ee1b8011c655f05edcea042d1_icgraph.map  alclla_8f90.html  alcnsa_8f90.html  alcnsa_8f90_a32db66bc4919ce200aca4977d38f3ba3_icgraph.map  alcnsa__I_8f90.html  alcnta_8f90.html  alcnta_8f90_a81bfa00b25ad556ed91de4cbe5f7a4e8_icgraph.map  allocCheck_8f90.html  appl_2rangular90_2cons__C_8f90.html  appl_2rbiotransform90_2ichkq1_8f90.html  appl_2rci90_2CMakeLists_8txt.html  appl_2rci90_2cxk_8f90.html  appl_2rci90_2cxk__I_8f90.html  appl_2rci90_2talk__I_8f90.html  (+1316 more)
travis-test-build/search/: all_10.js  all_a.js  all_f.js  files_1.js  files_12.js  files_13.js  files_14.js  files_5.js  files_8.js  files_a.js  functions_13.js  namespaces_16.html  namespaces_17.html  variables_9.js  variables_d.js
